@@ -27,6 +27,7 @@ export(plot_forest)
 export(plot_posterior)
 export(predicted_bf)
 export(prior)
+export(transform_es)
 import(bridgesampling)
 import(graphics)
 import(methods)
