@@ -1,7 +1,9 @@
 metaBMA 0.6.7
 ===========
 
+* transformation of effect sizes: transform_es()
 * New prior family: gamma distribution
+* Scale of the default prior for log odds ratio in meta_default() changed to the factor: pi/sqrt(3) = 1.81 instead of a factor of 2 (thanks to Frantisek Bartos)
 
 
 metaBMA 0.6.6
